# spencer_human_attribute_recognition

./: README.md
hog_attribute_classification_v2/: CMakeLists.txt  package.xml
hog_attribute_classification_v2/learned_models/seq1to4/: gender.yaml  jacket.yaml  long_hair.yaml  long_sleeves.yaml  long_trousers.yaml
hog_attribute_classification_v2/src/hog_attribute_classification/: train.cpp
pcd_viewer/: CMakeLists.txt  package.xml
pcd_viewer/launch/: pcd_viewer.launch  pcd_viewer.rviz
top_down_classifier/: CMakeLists.txt  package.xml
top_down_classifier/data/: README  test_cloud.pcd
top_down_classifier/data/fold000/: train.txt  val.txt
top_down_classifier/data/fold001/: train.txt  val.txt
top_down_classifier/data/fold002/: train.txt  val.txt
top_down_classifier/data/fold003/: train.txt  val.txt
top_down_classifier/data/fold004/: train.txt  val.txt
top_down_classifier/data/fold005/: train.txt  val.txt
top_down_classifier/data/fold006/: train.txt  val.txt
top_down_classifier/data/fold007/: train.txt  val.txt
top_down_classifier/data/fold008/: train.txt  val.txt
top_down_classifier/data/fold009/: train.txt  val.txt
top_down_classifier/data/fold100/: train.txt  val.txt
top_down_classifier/data/fold101/: train.txt  val.txt
top_down_classifier/data/fold102/: train.txt  val.txt
top_down_classifier/data/fold103/: train.txt  val.txt
top_down_classifier/data/fold104/: train.txt  val.txt
top_down_classifier/data/fold200/: train.txt  val.txt
top_down_classifier/data/fold201/: train.txt  val.txt
top_down_classifier/data/fold202/: train.txt  val.txt
top_down_classifier/data/fold203/: train.txt  val.txt
top_down_classifier/data/fold204/: train.txt  val.txt
top_down_classifier/data/fold205/: train.txt  val.txt
top_down_classifier/data/fold206/: train.txt  val.txt
top_down_classifier/data/fold207/: train.txt  val.txt
top_down_classifier/data/fold208/: train.txt  val.txt
top_down_classifier/data/fold209/: train.txt  val.txt
top_down_classifier/data/gender/fold2000/: train.txt  val.txt
top_down_classifier/data/gender/fold2001/: train.txt  val.txt
top_down_classifier/data/gender/fold2002/: train.txt  val.txt
top_down_classifier/data/gender/fold2003/: train.txt  val.txt
top_down_classifier/data/gender/fold2004/: train.txt  val.txt
top_down_classifier/data/gender/fold2005/: train.txt  val.txt
top_down_classifier/data/gender/fold2006/: train.txt  val.txt
top_down_classifier/data/gender/fold2007/: train.txt  val.txt
top_down_classifier/data/gender/fold2008/: train.txt  val.txt
top_down_classifier/data/gender/fold2009/: train.txt  val.txt
top_down_classifier/data/gender/fold3000/: train.txt  val.txt
top_down_classifier/data/gender/fold3001/: train.txt  val.txt
top_down_classifier/data/gender/fold3002/: train.txt  val.txt
top_down_classifier/data/gender/fold3003/: train.txt  val.txt
top_down_classifier/data/gender/fold3004/: train.txt  val.txt
top_down_classifier/data/gender/fold3005/: train.txt  val.txt
top_down_classifier/data/gender/fold3006/: train.txt  val.txt
top_down_classifier/data/gender/fold3007/: train.txt  val.txt
top_down_classifier/data/gender/fold3008/: train.txt  val.txt
top_down_classifier/data/gender/fold3009/: train.txt  val.txt
top_down_classifier/data/gender/fold4000/: train.txt  val.txt
top_down_classifier/data/gender/fold4001/: train.txt  val.txt
top_down_classifier/data/gender/fold4002/: train.txt  val.txt
top_down_classifier/data/gender/fold4003/: train.txt  val.txt
top_down_classifier/data/gender/fold4004/: train.txt  val.txt
top_down_classifier/data/gender/fold4005/: train.txt  val.txt
top_down_classifier/data/gender/fold4006/: train.txt  val.txt
top_down_classifier/data/gender/fold4007/: train.txt  val.txt
top_down_classifier/data/gender/fold4008/: train.txt  val.txt
top_down_classifier/data/gender/fold4009/: train.txt  val.txt
top_down_classifier/data/glasses/fold1000/: train.txt  val.txt
top_down_classifier/data/glasses/fold1001/: train.txt  val.txt
top_down_classifier/data/glasses/fold1002/: train.txt  val.txt
top_down_classifier/data/glasses/fold1003/: train.txt  val.txt
top_down_classifier/data/glasses/fold1004/: train.txt  val.txt
top_down_classifier/data/glasses/fold2000/: train.txt  val.txt
top_down_classifier/data/glasses/fold2001/: train.txt  val.txt
top_down_classifier/data/glasses/fold2002/: train.txt  val.txt
top_down_classifier/data/glasses/fold2003/: train.txt  val.txt
top_down_classifier/data/glasses/fold2004/: train.txt  val.txt
top_down_classifier/data/glasses/fold2005/: train.txt  val.txt
top_down_classifier/data/glasses/fold2006/: train.txt  val.txt
top_down_classifier/data/glasses/fold2007/: train.txt  val.txt
top_down_classifier/data/glasses/fold2008/: train.txt  val.txt
top_down_classifier/data/glasses/fold2009/: train.txt  val.txt
top_down_classifier/data/jacket/fold1000/: train.txt  val.txt
top_down_classifier/data/jacket/fold1001/: train.txt  val.txt
top_down_classifier/data/jacket/fold1002/: train.txt  val.txt
top_down_classifier/data/jacket/fold1003/: train.txt  val.txt
top_down_classifier/data/jacket/fold1004/: train.txt  val.txt
top_down_classifier/data/jacket/fold2000/: train.txt  val.txt
top_down_classifier/data/jacket/fold2001/: train.txt  val.txt
top_down_classifier/launch/: visualization.launch  visualization.rviz
top_down_classifier/learned_models/: top_down_classifier_fold207_optimized.yaml
top_down_classifier/learned_models/seq1to4-100weak-ycbcr-extents-scaling-optimized/: gender.yaml  jacket.yaml  long-hair.yaml  long-trousers.yaml
top_down_classifier/scripts/: experiment_runner.py  generate_pose_labels_clouds.py  groundtruth.txt  optimize_classifier_model.py
top_down_classifier/src/top_down_classifier/: classifier.cpp  classifier.h  cloud_preprocessing.h  common.h  features.cpp  features.h  tessellation.h  tessellation_generator.cpp  tessellation_generator.h  volume.cpp  volume.h  volume_visualizer.cpp  volume_visualizer.h
(+200 files in other folders)
