<?xml version="1.0"?>
<package>

  <name>top_down_classifier</name>
  <version>0.0.1</version>
  <description>Point-cloud classifier based upon the top-down approach described in Spinello et. al, ICRA 2011</description>

  <maintainer email="linder@informatik.uni-freiburg.de">Timm Linder</maintainer>

  <license>BSD</license>

  <author email="linder@informatik.uni-freiburg.de">Timm Linder</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>

</package>
